@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Remove user&apos;s address books when removing users, independent from address book permissions.
 * [mms] Fix infinite loop if array was passed to delete API call.
 * [mms] Fix descending sorting of result lists.
 * [mms] Return to same page when deleting contact from browse view.
@@ -1434,6 +1435,7 @@
    <date>2012-07-20</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Remove user&apos;s address books when removing users, independent from address book permissions.
 * [mms] Fix infinite loop if array was passed to delete API call.
 * [mms] Fix descending sorting of result lists.
 * [mms] Return to same page when deleting contact from browse view.
