@@ -2,6 +2,8 @@
 v3.0.15
 -------
 
+[jan] Remove user's address books when removing users, independent from address
+      book permissions.
 [mms] Fix infinite loop if array was passed to delete API call.
 [mms] Fix descending sorting of result lists.
 [mms] Return to same page when deleting contact from browse view.
